force-app/main/default/objects/Borrower_Mangement__c/Borrower_Mangement__c.object-meta.xml
<CustomObject>
    <label>Borrower Mangement</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Udhaar No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrower Mangements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>