force-app/main/default/objects/Borrower_Mangement__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Borrower Mangements</relationshipLabel>
    <relationshipName>Borrower_Mangements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>