force-app/main/default/objects/Borrower_Mangement__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Borrower Mangements</relationshipLabel>
    <relationshipName>Borrower_Mangements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>