force-app/main/default/objects/Borrower_Mangement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Borrower__c</columns>
    <columns>Item__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Payment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>